no pointer events on address + open

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ section:last-child {
     text-align: center;
     display: flex;
     flex-direction: column;
+    pointer-events: none;
     /* background-color: antiquewhite; */
 }
 
