--- a/style.css
+++ b/style.css
@@ -121,8 +121,24 @@ section:last-child {
 }
 
 .open {
+    flex: 0;
     text-align: start;
     font-size: 3rem;
+}
+
+.social {
+    margin-top: 16px;
+    flex: 1;
+    width: 100%;
+    gap: 8px;
+    /* background-color: teal; */
+    display: flex;
+}
+
+.social img {
+    height: 50px;
+    fill: orange;
+    stroke: orange;
 }
 
 .circle {
