--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ body {
     height: 100dvh;
     display: flex;
     flex-direction: column;
-    background-color: var(--unnaGreen);
-    background: url('/img/bg-pattern.png');
-    background-color: var(--unnaGreen);
+    /* background-color: var(--unnaGreen); */
+    /* background: url('/img/bg-pattern.png'); */
+    /* background-color: var(--unnaGreen); */
     font-family: "vinyl", sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -33,7 +33,6 @@ body {
 main {
     position: relative;
     width: 100%;
-    background-color: var(--unnaGreen);
     overflow-x: hidden;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
@@ -50,6 +49,8 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    background-color: var(--unnaGreen);
+
 }
 
 section:last-child {
