--- a/style.css
+++ b/style.css
@@ -136,14 +136,16 @@ section:last-child {
 }
 
 .open {
-    margin-top: 70px;
-    flex: 0;
+    /* margin-top: 70px; */
+    justify-content: end;
+    /* flex: 1; */
     text-align: start;
     font-size: 3rem;
+    /* background-color: #95D3C2; */
 }
 
 .social {
-    margin-top: 16px;
+    padding-top: 16px;
     flex: 1;
     width: 100%;
     gap: 8px;
