--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     /* margin: 24px; */
     overflow: hidden;
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     /* background-color: var(--unnaGreen); */
@@ -109,7 +110,10 @@ section {
 
 .photo-container {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* align-items: center; */
+    /* flex-direction: column; */
     gap: 16px;
     position: relative;
     width: 100%;
@@ -117,7 +121,8 @@ section {
 
 .photo-item {
     position: relative;
-    display: flex;
+    /* display: flex; */
+    width: auto;
 
     /* overflow: hidden; */
 }
@@ -127,7 +132,10 @@ section {
     border: 4px dotted white;
     border-radius: 48px;
     width: 100%;
-    height: 100%;
+    height: auto;
+    object-fit: contain;
+    
+    /* aspect-ratio: 1 /1; */
 }
 
 
@@ -356,17 +364,29 @@ section {
     }
 } */
 
+#wave {
+    stroke: white;
+    stroke-width: 50px;
+}
+
 .ticker-wrapper {
     position: absolute;
     display: flex;
-    align-items: end;
+    align-items: center;
+    top: 0;
     /* bottom: 15%; */
     display: flex;
     width: 110%;
-    height: 15%;
+    height: 75px;
     /* scale: 75%; */
     /* background-color: rgb(133, 133, 163); */
+    pointer-events: none;
 }
+
+.ticker-wrapper svg {
+    height: auto;
+}
+
 .wave-text {
     position: absolute;
     width: 100%;
@@ -399,3 +419,7 @@ text {
 textPath {
     animation: scrollText 10s linear infinite;
 } */
+
+@media (min-width: 768px) {
+
+}
