--- a/style.css
+++ b/style.css
@@ -373,12 +373,12 @@ section {
     position: absolute;
     display: flex;
     /* align-self: flex-end; */
-    /* align-items: end; */
+    align-items: end;
     top: 0;
     /* bottom: 15%; */
     display: flex;
     width: 110%;
-    height: 75px;
+    height: 50px;
     /* scale: 75%; */
     /* background-color: rgb(133, 133, 163); */
     pointer-events: none;
