--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ main {
     height: 100%;
     width: 100%;
     overflow-x: hidden;
-    scroll-snap-type: y mandatory;
+    scroll-snap-type: y proximity;
     /* background-color: blue; */
 }
 
@@ -80,32 +80,24 @@ section {
     background: linear-gradient(var(--unnaGreen) 40%, var(--unnaOrange));
 }
 
-
-
-.logo {
+.logo-wrapper {
     position: relative;
-    flex: .75;
     display: flex;
-    align-items: end;
     justify-content: center;
-    top: 0;
-    height: auto;
-    width: 100%;
-    margin-bottom: 16px;
+    flex-direction: column;
+    /* background-color: orange; */
 }
 
 .logo img {
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
 }
 
 .logo-text {
+    margin-top: 16px;
     font-family: "vinyl", sans-serif;
     font-weight: 400;
     font-style: normal;
-    /* align-self: flex-start; */
-    justify-self: start;
-    /* background-color: aqua; */
 }
 
 .photo-container {
@@ -166,12 +158,9 @@ section {
 }
 
 .open {
-    /* margin-top: 70px; */
     justify-content: end;
-    /* flex: 1; */
     text-align: start;
     font-size: 3rem;
-    /* background-color: #95D3C2; */
 }
 
 .open-span:first-child, .open-span:last-child {
@@ -189,8 +178,6 @@ section {
 
 .social img {
     height: 50px;
-    fill: orange;
-    stroke: orange;
 }
 
 /* Static background pattern applied to the entire viewport */
@@ -345,25 +332,6 @@ section {
 }
 
 
-
-
-
-/* Make circles to "cut out" sections of the background */
-/* @keyframes updateClipPath {
-    0% {
-        clip-path: circle(0% at 0% 0%);
-        -webkit-clip-path: circle(0% at 0% 0%);
-    }
-    50% {
-        clip-path: circle(40% at 10% 10%);
-        -webkit-clip-path: circle(40% at 10% 10%);
-    }
-    100% {
-        clip-path: circle(0% at 0% 0%);
-        -webkit-clip-path: circle(0% at 0% 0%);
-    }
-} */
-
 #wave {
     stroke: white;
     stroke-width: 50px;
@@ -425,15 +393,31 @@ textPath {
 
 @media (min-width: 374px) {
     .logo img {
-        height: 250px;
-        width: 250px;
+        height: 300px;
+        width: 300px;
     }
 }
 
 @media (min-width: 767px) {
-    /* .logo {
-        justify-content: start;
-    } */
+
+    .section-head {
+        align-items: start;
+        justify-content: center;
+    }
+
+    .logo-wrapper {
+        width: 65%;
+    }
+    
+    .logo img {
+        height: 450px;
+        width: 450px;
+    }
+    
+    .logo-text {
+        font-size: 3rem;
+    }
+
     .ticker-wrapper {
         /* top: 20px; */
         align-self: flex-end;
@@ -441,6 +425,72 @@ textPath {
     }
     .ticker-wrapper svg {
         top: 150px;
+        right: -50px;
+        rotate: 25deg;
+    }
+
+    @keyframes moveCircle1 {
+        0% {
+            top: 90%;
+            left: 75%;
+        }
+        50% {
+            top: 50%;
+            left: 80%;
+        }
+        100% {
+            top: 82%;
+            left: 90%;
+        }
+    }
+
+    @keyframes moveCircle2 {
+        0% {
+            top: 90%;
+            left: 75%;
+        }
+        50% {
+            top: 50%;
+            left: 70%;
+        }
+        100% {
+            top: 90%;
+            left: 90%;
+        }
+    }
+
+    @keyframes moveCircle3 {
+        0% {
+            top: 90%;
+            left: 85%;
+        }
+        50% {
+            top: 40%;
+            left: 90%;
+        }
+        100% {
+            top: 80%;
+            left: 95%;
+        }
+    }
+
+    .section-open {
+        padding-left: 80px;
+    }
+
+    .open {
+        font-size: 4rem;
+    }
+}
+
+@media (min-width: 1023px) {
+    .ticker-wrapper {
+        /* top: 20px; */
+        align-self: flex-end;
+        width: 70%;
+    }
+    .ticker-wrapper svg {
+        top: 200px;
         right: -50px;
         rotate: 25deg;
     }
