--- a/style.css
+++ b/style.css
@@ -40,6 +40,23 @@ body {
 
 }
 
+.testel {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 30%;
+    background: url('/img/bg-pattern.png');
+
+    background-clip: text;
+    /* background-color: black; */
+
+    border: 24px solid rgb(81, 62, 62);
+    border-color: transparent;
+    color: rgba(0, 0, 0, 0);
+    z-index: 1000;
+    font-size: 5rem;
+}
+
 main {
     position: absolute;
     height: 100%;
@@ -71,8 +88,8 @@ section {
 .section-photos {
     background: linear-gradient(var(--unnaOrange), var(--unnaGreen) 15%);
 
-    /* background: black; */
-    height: fit-content;
+    background: black;
+    /* height: fit-content; */
     padding-bottom: 160px;
 }
 
