--- a/style.css
+++ b/style.css
@@ -40,21 +40,91 @@ body {
 
 }
 
-.testel {
+.unna-dots-wrapper {
+    visibility: hidden;
     position: absolute;
-    bottom: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 300px;
     width: 100%;
-    height: 30%;
-    background: url('/img/bg-pattern.png');
-
-    background-clip: text;
-    /* background-color: black; */
-
-    border: 24px solid rgb(81, 62, 62);
-    border-color: transparent;
-    color: rgba(0, 0, 0, 0);
+    /* background-color: green; */
     z-index: 1000;
-    font-size: 5rem;
+    scale: 1.3;
+    overflow: hidden;
+}
+
+.unna-dots-wrapper img {
+    position: absolute;
+    width: 1900px;
+    height: 1900px;
+    /* image-rendering: auto; */
+}
+
+.unna-just-text {
+    /* transform: translateY(10px); */
+    z-index: 3000;
+    pointer-events: none;
+
+}
+
+/* .unna-dots-wrapper .nopat {
+    width: 1900px;
+    height: 1900px;
+    z-index: 1200;
+    mix-blend-mode: screen;
+} */
+
+.unna-dots {
+    position: absolute;
+    top: 26%;
+    left: 50%;
+    height: 200px;
+    width: 200px;
+    /* scale: 1; */
+    background: url(/img/bg-pattern.png);
+    background-size: 600%;
+    clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    z-index: 1000;
+    transform-origin: center;
+    transform: translateX(-50%);
+    /* transform: translateY(-50%); */
+    animation: dotanim 10s ease-in-out infinite;
+}
+
+@keyframes dotanim {
+    0% {
+        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    }
+    15% {
+        clip-path: path("M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,21.33-82.75,44.73C23.83,71.66.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z");
+    }
+
+    30% {
+        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-62.02,2.06-90.3,25.46C16.28,52.4.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    }
+    50% {
+        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,22.15-33.53,31.5-53.36,5.72-9.4,10.56-25.2,2.21-32.72Z');
+    }
+    60% {
+        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,31.79-17.2,46.26-32.22,15.08-15.84,38.69-23.08,48.03-42.91,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    }
+
+    70% {
+        clip-path: path('M188.96,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.4,21.72,170.37,1.74,133.39,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.88,83.89.02,126.49c-.27,16.62,2.29,25.32,13.42,37.12,10.7,11.34,19.92,12.81,45.59,13.73,2.17-.53,23.04,10.65,24.96,11.58,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    }
+    85% {
+        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,8.68-13.98,9.27-20.32C200.01,19.97,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    }
+    90% {
+        clip-path: path("M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,21.33-82.75,44.73C23.83,71.66.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z");
+    }
+
+    100% {
+        clip-path: path('M188.95,85.58c-2.18-1.88-2.74-3.39-1.88-6.23,1.82-6.04,2.59-12.28,3.1-18.63C194.39,21.72,170.36,1.74,133.38,0c-37.52.3-54.47,9.61-82.75,33.01C23.83,59.95.87,83.89.01,126.49c-.27,16.62,3.69,24.15,13.42,37.12,14.62,19.4,41.01,28.02,64.58,24.65,2.17-.53,4.04-.27,5.97.67,4.62,2.24,9.33,3.89,14.55,4.5,21.02,2.42,42.24-6.75,56.71-21.77,15.08-15.84,28.24-33.53,37.58-53.36,5.72-9.4,4.47-25.2-3.88-32.72Z');
+    }
+    
 }
 
 main {
@@ -78,18 +148,20 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    overflow-x: hidden;
     /* background-color: var(--unnaGreen); */
 }
 
 .section-head {
     background: linear-gradient(var(--unnaGreen) 40%, var(--unnaOrange));
+    /* height: 100%; */
 }
 
 .section-photos {
     background: linear-gradient(var(--unnaOrange), var(--unnaGreen) 15%);
 
     /* background: black; */
-    /* height: fit-content; */
+    height: fit-content;
     padding-bottom: 200px;
 }
 
@@ -98,6 +170,7 @@ section {
 }
 
 .logo-wrapper {
+    /* visibility: hidden; */
     position: relative;
     display: flex;
     justify-content: center;
@@ -106,6 +179,7 @@ section {
 }
 
 .logo img {
+    /* visibility: hidden; */
     height: 250px;
     width: 250px;
 }
