--- a/style.css
+++ b/style.css
@@ -37,24 +37,6 @@ body {
     text-align: center;
     overflow: hidden;
     align-items: center;
-
-}
-
-.testel {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 30%;
-    background: url('/img/bg-pattern.png');
-
-    background-clip: text;
-    /* background-color: black; */
-
-    border: 24px solid rgb(81, 62, 62);
-    border-color: transparent;
-    color: rgba(0, 0, 0, 0);
-    z-index: 1000;
-    font-size: 5rem;
 }
 
 main {
@@ -89,7 +71,7 @@ section {
     background: linear-gradient(var(--unnaOrange), var(--unnaGreen) 15%);
 
     /* background: black; */
-    /* height: fit-content; */
+    height: fit-content;
     padding-bottom: 200px;
 }
 
